--- a/src/assets/styles/header.sass
+++ b/src/assets/styles/header.sass
@@ -1,20 +1,20 @@
 header
   background: radial-gradient(circle, rgb(52, 58, 64) 0%, rgb(38, 41, 45) 100%)
-  height: 90vh
-  width: $h
+  height: 100vh
+  width: 100vw
+  box-sizing: border-box
   color: var(--light)
   box-shadow: 0 0 10px black
+  max-width: 100%
 
 #headerContent
-  width: $wp
-  max-width: $wm
   display: flex
   flex-direction: column
   align-items: $c
   justify-content: $c
   text-align: $c
   height: 90%
-  margin: auto
+  width: 70%
 
 .social-media-icon
   margin: 3vw 3vw 0 0
