--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -1,17 +1,21 @@
-$c: center
-$c2: rgb(0, 86, 179) //blue color
-$h: 100%
-$n: none
-$wm: 700px //width max
-$wp: 80% //width percent
 
-@import ../assets/styles/arrowDown
-@import ../assets/styles/footer
-@import ../assets/styles/general
-@import ../assets/styles/header
-@import ../assets/styles/loader
-@import ../assets/styles/mediaMax580
-@import ../assets/styles/mediaMin900
-@import ../assets/styles/menu
-@import ../assets/styles/projects
-@import ../assets/styles/skills
+$b: 1px solid red
+
+%wholeVisible
+  width: 100vw
+  height: 100vh
+
+*
+  box-sizing: border-box
+  position: relative
+
+#root
+ border: 1px solid red
+ margin: 0
+ padding: 0
+ width: 100vw
+ height: 100vh
+
+header
+  @extend %wholeVisible
+  background: radial-gradient(circle, rgb(52, 58, 64) 0%, rgb(38, 41, 45) 100%)
