--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -1,21 +1,10 @@
-
-$b: 1px solid red
-
-%wholeVisible
-  width: 100vw
-  height: 100vh
+@import "~bulma/bulma"
 
 *
   box-sizing: border-box
-  position: relative
 
-#root
- border: 1px solid red
- margin: 0
- padding: 0
- width: 100vw
- height: 100vh
+body
+  background-color: red
 
-header
-  @extend %wholeVisible
-  background: radial-gradient(circle, rgb(52, 58, 64) 0%, rgb(38, 41, 45) 100%)
+
+@import ../assets/styles/navbar
