--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -1,3 +1,7 @@
+$yellow: yellow
+$blue: #1976d2
+$link-hover: $yellow
+
 @import "~bulma/bulma"
 
 *
@@ -7,4 +11,7 @@ body
   background-color: red
 
 
+
+@import ../assets/styles/general
+@import ../assets/styles/header
 @import ../assets/styles/navbar
