--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -2,7 +2,7 @@ $yellow: yellow
 $blue: #1976d2
 $link-hover: $yellow
 
-@import "~bulma/bulma"
+@import "bulma"
 
 *
   box-sizing: border-box
@@ -11,7 +11,7 @@ body
   background-color: red
 
 
-
+@import ../assets/styles/bulma-tooltip/index
 @import ../assets/styles/general
 @import ../assets/styles/header
 @import ../assets/styles/navbar
