animated gradient, flex reverse on navbar, smooth scrool

--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -7,11 +7,17 @@ $link-hover: $yellow
 *
   box-sizing: border-box
 
+html
+  scroll-behavior: smooth
+
 body
   background-color: red
 
+.section
+  min-height: 100vh
 
-@import ../assets/styles/bulma-tooltip/index
-@import ../assets/styles/general
 @import ../assets/styles/header
 @import ../assets/styles/navbar
+@import ../assets/styles/about
+
+@import ../assets/styles/bulma-tooltip/index
