--- a/src/assets/styles/header.sass
+++ b/src/assets/styles/header.sass
@@ -1,2 +1,14 @@
 header
   background: radial-gradient(circle, rgb(52, 58, 64) 0%, rgb(38, 41, 45) 100%)
+  background-size: 400%
+  animation: gradient 30s linear 2s infinite alternate
+
+@keyframes gradient
+	0%
+		background-position: 0% 50%
+
+	50%
+		background-position: 100% 50%
+
+	100%
+		background-position: 0% 50%
