--- a/src/assets/styles/navbar.sass
+++ b/src/assets/styles/navbar.sass
@@ -1,3 +1,4 @@
 .navbar.is-fixed-top
-  flex-direction: row-reverse
+  display: flex !important
+  flex-direction: row-reverse !important
   background-color: rgba(0,0,0, 0)
