--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -19,5 +19,6 @@ body
 @import ../assets/styles/header
 @import ../assets/styles/navbar
 @import ../assets/styles/about
+@import ../assets/styles/projects
 
 @import ../assets/styles/bulma-tooltip/index
