--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -1,5 +1,7 @@
 $yellow: yellow
+$green: #58b792
 $blue: #1976d2
+$link: white
 $link-hover: $yellow
 
 @import "bulma"
@@ -12,6 +14,9 @@ html
 
 body
   background-color: red
+
+a
+  text-shadow: 0.025rem 0.025rem 0.125rem #000000
 
 .section
   min-height: 100vh
