--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -12,8 +12,8 @@ $link-hover: $yellow
 html
   scroll-behavior: smooth
 
-body
-  background-color: red
+hr
+  background-color: $grey-lighter
 
 a
   text-shadow: 0.025rem 0.025rem 0.125rem #000000
