adjusted styling of navbar items

--- a/src/assets/styles/about.sass
+++ b/src/assets/styles/about.sass
@@ -1,2 +1,2 @@
-#About
-  background-color: $white-ter
+div#About.section  div.hero.is-fullheight-with-navbar div.hero-body div.container.is-fluid div.animated.fadeInUpBig div.container.is-fluid
+  margin-bottom: 2.5rem
