--- a/src/assets/styles/navbar.sass
+++ b/src/assets/styles/navbar.sass
@@ -2,3 +2,9 @@
   display: flex !important
   flex-direction: row-reverse !important
   background-color: rgba(0,0,0, 0)
+
+.navbar i
+  color: white
+
+.navbar i:hover
+  color: yellow
