--- a/src/assets/styles/projects.sass
+++ b/src/assets/styles/projects.sass
@@ -1,2 +1,4 @@
 div.section#Projects div.hero div.hero-body div.tile.is-ancestor
   flex-wrap: wrap
+
+div.section#Projects div.hero div.hero-body div.tile.is-ancestor div.tile.is-6
