--- a/src/assets/styles/projects.sass
+++ b/src/assets/styles/projects.sass
@@ -1,4 +1,16 @@
-div.section#Projects div.hero div.hero-body div.tile.is-ancestor
+.section#Projects .hero .hero-body .tile.is-ancestor
   flex-wrap: wrap
 
-div.section#Projects div.hero div.hero-body div.tile.is-ancestor div.tile.is-6
+.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-6.is-parent .animated.fadeInUp .tile.is-child .card
+  border-radius: 1rem
+
+.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-6.is-parent .animated.fadeInUp .tile.is-child .card:hover
+  transform: translateY(-1.5px)
+  box-shadow: 0px 0px 5px 0.25px black
+
+.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-6.is-parent .animated.fadeInUp .tile.is-child .card img
+  border-top-left-radius: 1rem
+  border-top-right-radius: 1rem
+
+.section#Projects
+  box-shadow: 0px -5px -5px 0px rgba(0,0,0,0.75)
