--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -7,9 +7,11 @@ $link-hover: $yellow
 
 *
   box-sizing: border-box
+  user-select: none
 
 html
   scroll-behavior: smooth
+  cursor: default
 
 hr
   background-color: $grey-lighter
