--- a/src/assets/styles/about.sass
+++ b/src/assets/styles/about.sass
@@ -1,2 +1,5 @@
-div#About.section  div.hero.is-fullheight-with-navbar div.hero-body div.container.is-fluid div.animated.fadeInUpBig div.container.is-fluid
+#About.section  .hero.is-fullheight-with-navbar .hero-body .container.is-fluid .animated.fadeInUpBig .container.is-fluid
   margin-bottom: 2.5rem
+
+#About.section
+  box-shadow: inset 0px 2px 4px 0px rgba(0,0,0,0.69)
