--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -16,8 +16,6 @@ html
 hr
   background-color: $grey-lighter
 
-
-
 .section
   min-height: 100vh
 
@@ -26,13 +24,5 @@ hr
 @import ../assets/styles/about
 @import ../assets/styles/projects
 
+@import ../assets/styles/media
 @import ../assets/styles/bulma-tooltip/index
-
-@media only screen and (max-width: 580px)
-  .section
-    padding-left: 0.5rem
-    padding-right: 0.5rem
-
-  .hero-body
-    padding-left: 0
-    padding-right: 0
