--- a/src/assets/styles/projects.sass
+++ b/src/assets/styles/projects.sass
@@ -1,15 +1,16 @@
 .section#Projects .hero .hero-body .tile.is-ancestor
   flex-wrap: wrap
+  justify-content: center
 
-.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-6.is-parent .animated.fadeInUp .tile.is-child .card
-  border-radius: 1rem
+.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-5.is-parent .animated.fadeInUp .tile.is-child .card
+  border-radius: 0.5rem
 
-.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-6.is-parent .animated.fadeInUp .tile.is-child .card:hover
-  transform: translateY(-3px)
+.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-5.is-parent .animated.fadeInUp .tile.is-child .card:hover
+  transform: translateY(-5px)
 
-.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-6.is-parent .animated.fadeInUp .tile.is-child .card img
-  border-top-left-radius: 1rem
-  border-top-right-radius: 1rem
+.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-5.is-parent .animated.fadeInUp .tile.is-child .card img
+  border-top-left-radius: 0.5rem
+  border-top-right-radius: 0.5rem
 
 .section#Projects
   box-shadow: 0px -5px -5px 0px rgba(0,0,0,0.75)
