--- a/src/assets/styles/header.sass
+++ b/src/assets/styles/header.sass
@@ -1,4 +1,4 @@
-header
+#Header
   background: radial-gradient(circle, rgb(52, 58, 64) 0%, rgb(38, 41, 45) 100%)
   background-size: 400%
   animation: gradient 30s linear 2s infinite alternate
