added new project

--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -1,3 +1,4 @@
+
 $yellow: yellow
 $green: #58b792
 $blue: #1976d2
@@ -18,11 +19,14 @@ hr
 
 .section
   min-height: 100vh
+  z-index: 1
 
+@import ../assets/styles/footer
 @import ../assets/styles/header
 @import ../assets/styles/navbar
 @import ../assets/styles/about
 @import ../assets/styles/projects
 
 @import ../assets/styles/media
+@import ../assets/styles/animations
 @import ../assets/styles/bulma-tooltip/index
