--- a/src/assets/styles/projects.sass
+++ b/src/assets/styles/projects.sass
@@ -1,13 +1,31 @@
-.section#Projects .hero .hero-body .tile.is-ancestor
+
+#Projects .tile.is-child.card.animated.fadeInUp
+  border-bottom-left-radius: 0.5rem
+  border-bottom-right-radius: 0.5rem
+  box-shadow: 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12), 0 2px 4px -1px rgba(0,0,0,.2)
+
+#Projects
+  box-shadow: 0px -5px -5px 0px rgba(0,0,0,0.75)
+
+#Projects .tile.is-ancestor
   flex-wrap: wrap
   justify-content: center
+  flex-direction: column
+  align-items: center
 
-.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-5.is-parent .animated.fadeInUp .tile.is-child .card
-  border-radius: 0.5rem
+#Projects .card-footer
+  border: none
+  justify-content: space-between
 
-.section#Projects .hero .hero-body .tile.is-ancestor .tile.is-5.is-parent .animated.fadeInUp .tile.is-child .card img
-  border-top-left-radius: 0.5rem
-  border-top-right-radius: 0.5rem
+#Projects .card-content
+  padding: 1rem
 
-.section#Projects
-  box-shadow: 0px -5px -5px 0px rgba(0,0,0,0.75)
+#Projects .content
+  margin-bottom: 0.5rem
+
+#Projects .stack
+  display: flex
+  justify-content: center
+
+#Projects .IconForProject
+  margin: 0.5rem
