--- a/src/assets/styles/footer.sass
+++ b/src/assets/styles/footer.sass
@@ -1,3 +1,6 @@
 #Footer
-  min-height: 20rem
+  min-height: 3rem
+  display: flex
+  flex-direction: column
+  justify-content: center
   background-color: rgb(38, 40, 45)
