added svg to footer

--- a/src/assets/styles/footer.sass
+++ b/src/assets/styles/footer.sass
@@ -1,6 +1,6 @@
 #Footer
-  min-height: 3rem
+  min-height: 5rem
   display: flex
   flex-direction: column
   justify-content: center
-  background-color: rgb(38, 40, 45)
+  background-color: $dark
