adjusted svgs for footer

--- a/src/assets/styles/media.sass
+++ b/src/assets/styles/media.sass
@@ -6,3 +6,9 @@
   .hero-body
     padding-left: 0
     padding-right: 0
+
+  #Projects #mountainFooter
+    display: none
+
+  #Projects #treeFooter
+    width: 100%
