--- a/src/assets/styles/projects.sass
+++ b/src/assets/styles/projects.sass
@@ -7,7 +7,7 @@
 #Projects
   box-shadow: 0px -5px -5px 0px rgba(0,0,0,0.75)
   position: relative
-  padding-bottom: 500px
+  padding-bottom: 30rem
 
 #Projects .tile.is-ancestor
   flex-wrap: wrap
@@ -35,10 +35,19 @@
 #Projects .IconForProject:hover
   transform: translateY(-0.25rem)
 
-#Projects #mountainFooter, #treeFooter
+#Projects #svgFooter
   position: absolute
   bottom: 0
+  transform: translateX(-50%)
+  left: 50%
+  width: 100%
+  display: flex
+  align-items: flex-end
+  justify-content: center
+  z-index: -1
 
 #treeFooter
-  right: 10rem
-  z-index: -1
+  width: 30%
+
+#mountainFooter
+  width: 50%
